--- a/src/tasks.css
+++ b/src/tasks.css
@@ -1,10 +1,7 @@
 .tab-wrapper {
     display: flex;
     flex-direction: column;
-    flex: 1 1 0;
-    min-height: 0;
-    overflow: hidden;
-    gap: 2rem;
+    background-color: var(--main-bg-color);
 }
 
 
@@ -14,14 +11,17 @@
     width: clamp(300px, 80%, 960px);
     gap: 0.75rem;
 
-    .info-bar{
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0;
-        margin-bottom: 1.25rem;
-    }
+}
+
+.info-bar {
+    display: flex;
+    width: clamp(300px, 80%, 960px);
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.25rem 0.25rem .5rem 0.25rem;
+    margin-top: 4rem;
+    margin-bottom: -1rem;
+    background-color: var(--main-bg-color);
 }
 
 .task-card {
@@ -112,7 +112,6 @@
     width: clamp(300px, 80%, 960px);
     min-height: 10rem;
     gap: 0.75rem;
-    margin-top: 5.75rem;
 
     .tasks-s2-bar {
         display: flex;
